# serializer version: 1
# name: test_blu_trv_number_entity[number.trv_name_external_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 50,
      'min': -50,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.trv_name_external_temperature',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TRV-Name external temperature',
    'platform': 'shelly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'external_temperature',
    'unique_id': '123456789ABC-blutrv:200-external_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_blu_trv_number_entity[number.trv_name_external_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TRV-Name external temperature',
      'max': 50,
      'min': -50,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.trv_name_external_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_blu_trv_number_entity[number.trv_name_valve_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.trv_name_valve_position',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TRV-Name valve position',
    'platform': 'shelly',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'valve_position',
    'unique_id': '123456789ABC-blutrv:200-valve_position',
    'unit_of_measurement': '%',
  })
# ---
# name: test_blu_trv_number_entity[number.trv_name_valve_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TRV-Name valve position',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.trv_name_valve_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
